kotlin/kotlin_from_entry_to_advanced_combat/src/com/easykotlin/test/chapter2/Val.kt
package com.easykotlin.test.chapter2

fun main(args: Array<String>) {
    val _x = 1;
    println(_x)

    val y = 2;
    println(y)

    val ip_addr = "127.0.0.1";
    println(ip_addr)

    // error
    // val _x ++

    var a = 1;
    a ++

}